// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema.storage;

option go_package = "namespacelabs.dev/foundation/schema/storage";

import "google/protobuf/any.proto";

message EnvironmentDiagnostics {
    string   runtime                              = 1;
    repeated google.protobuf.Any runtime_specific = 2;
}